<resources>
    <string name="app_name">Fedfit</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="string_explain_workout_create_btn">Click the button to start building a workout session template</string>
    <string name="Custom_Component_Test">Component_Test</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="noWorkoutCreated">You have no workout templates, please check you internet connection or create one in the build a workout tab</string>
    <string name="Save">Save</string>
    <string name="Discard">Discard</string>
    <string name="create_new_Workout">Make a new workout schema</string>
    <string name="create_new_exercise">Add new exercise to workout</string>
    <string name="add_new_exercise">Add new exercise</string>
    <string name="workout_title">Workout Title</string>
    <string name="btn_workout_session_string">Build Workout Session</string>
    <string name="hint_workout_session_title">Session Title</string>
    <string name="btn_logout">Logout</string>
    <string name="workout_session">Workout Session</string>
    <string name="workout_history">Workout History</string>
    <string name="why_chat_i_dedelte" />
    <string name="workout_template">Workout Template</string>
    <string name="btn_create_new_exercise">Add Exercise</string>
</resources>