<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.workoutTemplate.NotificationsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/newExerciseTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/email_password_reset_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/workout_title"
                    android:inputType="text"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/newExerciseBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


            </LinearLayout>


            <LinearLayout
                android:id="@+id/notificationBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_create_new_workout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create_new_Workout" />

                <Button
                    android:id="@+id/btn_add_exercise_to_workout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_create_new_exercise"
                    android:visibility="gone"
                    tools:text="@string/btn_create_new_exercise" />

                <Button
                    android:id="@+id/btn_save_new_workout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Save"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btn_discard_new_workout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Discard"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>